Reread partition table before wiping when creating new partitions

https://bugs.freedesktop.org/show_bug.cgi?id=85477
https://bugs.debian.org/767457
https://launchpad.net/bugs/1460602